--- a/references.bib
+++ b/references.bib
@@ -1,9 +1,12 @@
-@misc{tourismdata,
-  author = {{Australian Bureau of Statistics}},
-  year = 2023,
-  note = "Accessed 28 July 2023",
-  title = {Overseas Arrivals and Departures, Australia},
-  url = "https://www.abs.gov.au/statistics/industry/tourism-and-transport/overseas-arrivals-and-departures-australia/may-2023"
+@article{combinations,
+  title   = {Forecast combinations: an over 50-year review},
+  author  = {Xiaoqian Wang and Rob J Hyndman and Feng Li and Yanfei Kang},
+  year    = 2023,
+  url     = {http://robjhyndman.com/publications/combinations/},
+  journal = {International J Forecasting},
+  volume  = 39,
+  number  = 4,
+  pages   = {1518-1547}
 }
 
 @book{fpp3,
@@ -16,11 +19,38 @@
   address   = {Melbourne, Australia}
 }
 
+@article{lichtendahl2013better,
+  title     = {Is it better to average probabilities or quantiles?},
+  author    = {Lichtendahl Jr, Kenneth C and Grushka-Cockayne, Yael and Winkler, Robert L},
+  journal   = {Management Science},
+  volume    = {59},
+  number    = {7},
+  pages     = {1594--1611},
+  year      = {2013},
+  publisher = {INFORMS}
+}
+
+@misc{MelbourneLockdowns,
+  author = {{Wikipedia}},
+  year   = 2024,
+  note   = {Accessed 8 January 2024},
+  title  = {{COVID-19} pandemic in {Victoria}},
+  url    = {https://en.wikipedia.org/wiki/COVID-19_pandemic_in_Victoria#Lockdown_statistics}
+}
+
 @misc{pedestrians,
-  author = {{City of Melbourne}},
-  url = "https://www.pedestrian.melbourne.vic.gov.au/",
-  note = "Accessed 5 January 2024",
-  year = 2024,
-  title = {Pedestrian counting system},
+  author  = {{City of Melbourne}},
+  url     = {https://www.pedestrian.melbourne.vic.gov.au/},
+  note    = {Accessed 5 January 2024},
+  year    = 2024,
+  title   = {Pedestrian counting system},
   address = {Melbourne, Australia}
+}
+
+@misc{tourismdata,
+  author = {{Australian Bureau of Statistics}},
+  year   = 2024,
+  note   = {Accessed 8 January 2024},
+  title  = {Overseas Arrivals and Departures, Australia},
+  url    = {https://www.abs.gov.au/statistics/industry/tourism-and-transport/overseas-arrivals-and-departures-australia/oct-2023}
 }
